sentry-core/core/main/model/objects/Sentry_Config__mdt/Sentry_Config__mdt.object-meta.xml
<CustomObject>
    <label>Sentry Config</label>
    <pluralLabel>Sentry Configs</pluralLabel>
</CustomObject>