sentry-core/core/main/model/objects/Sentry_Config__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Must extend SentryConfig</description>
    <label>ApexClass</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>