sentry-core/core/main/model/objects/Sentry_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>