sentry-core/core/main/model/objects/Sentry_Config__mdt/fields/Sampling__c.field-meta.xml
<CustomField>
    <fullName>Sampling__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Sampling</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>