sentry-core/core/main/model/objects/Sentry_Config__mdt/validationRules/Must_be_Between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_Between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula
  >Sampling__c &gt; 100 ||  Sampling__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Sampling__c</errorDisplayField>
    <errorMessage>The Sampling rate must be between 0 and 100 %.</errorMessage>
</ValidationRule>